# dev-landing-api

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  docker-compose.yml  pyrightconfig.json
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_create_contact_submissions.py
backend/app/: main.py
backend/app/contact/: ai.py  email.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/core/: config.py  database.py  error_handlers.py  exceptions.py  logging.py  middleware.py  rate_limit.py
backend/app/health/: router.py
backend/app/metrics/: repository.py  router.py  schemas.py  service.py
backend/app/templates/email/: owner.html  user.html
backend/tests/: conftest.py  helpers.py  test_contact.py  test_contact_rate_limit.py  test_contact_submit.py  test_contact_validation.py  test_health.py  test_metrics.py
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.setup.js
frontend/src/: App.vue  style.css
frontend/src/api/: client.js  client.test.js
frontend/src/components/: AboutSection.vue  ContactForm.test.js  ContactForm.vue  ExperienceSection.vue  HeroSection.vue  PortfolioSection.test.js  PortfolioSection.vue  ThemeSwitcher.test.js  ThemeSwitcher.vue
frontend/src/composables/: useTheme.js
frontend/src/data/: profile.js
frontend/src/utils/: validationErrors.js  validationErrors.test.js
infra/nginx/: nginx.conf
postman/: dev-landing-api.json
